# katanascape

./: Anchor.toml  Cargo.toml  context.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
examples/: 01-init-agent.ts  02-private-payment.ts  03-agent-escrow.ts  04-kill-switch.ts  05-hierarchy.ts  06-invoice-client.ts
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
programs/kill-switch/: Cargo.toml
programs/kill-switch/src/: lib.rs
programs/policy-engine/: Cargo.toml
programs/policy-engine/src/: lib.rs
programs/wallet-registry/: Cargo.toml
programs/wallet-registry/src/: lib.rs
tests/integration/: mvp.spec.ts
tests/unit/: smoke.spec.ts
