[workspace]
members = [
  "programs/policy-engine",
  "programs/escrow",
  "programs/wallet-registry",
  "programs/kill-switch"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
