[package]
name = "kill-switch"
version = "0.1.0"
description = "KatanaScape kill switch"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kill_switch"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
